--- a/src/content/posts/关于我的博客.md
+++ b/src/content/posts/关于我的博客.md
@@ -12,4 +12,4 @@ lang: ''
 
 ### 记录
 
-2025-10-05，在这创建我的博客，这个博客或许并不会记录一些东西，因为我并不认为这个博客能当知识库用，或许会在另一个子域名下在创建一个知识库，也能叫作笔记库吧。
+2025-10-05,在这创建我的博客,这个博客或许并不会记录一些东西,因为我并不认为这个博客能当知识库用,或许会在另一个子域名下在创建一个知识库,也能叫作笔记库吧.
