--- a/src/content/posts/关于我的博客.md
+++ b/src/content/posts/关于我的博客.md
@@ -1,13 +1,13 @@
 ---
 title: 关于我的博客
 published: 2025-10-05
-description: ''
-image: ''
+description: 记录
+image: ""
 tags:
   - 关于
-category: ''
-draft: false 
-lang: ''
+category: ""
+draft: false
+lang: ""
 ---
 
 ### 记录
